--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Agdasima&family=Belanosima:wght@400;600&family=Fira+Sans:ital,wght@0,400;1,300&family=Kanit:ital,wght@0,100;0,300;1,500&family=Montserrat:ital,wght@0,500;1,700&family=Mukta:wght@300;400;700&family=PT+Serif&family=Playfair+Display:ital@0;1&family=Poppins:ital,wght@0,100;0,300;0,600;1,200;1,400;1,500;1,900&family=Ysabeau+Infant:wght@100;300&display=swap" rel="stylesheet">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
